--- a/argocd/kubeseal/argocd-kubeseal.yaml
+++ b/argocd/kubeseal/argocd-kubeseal.yaml
@@ -10,7 +10,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   source:
     path: sealed-secrets/kubeseal-app
-    repoURL: 'https://github.com/obynodavid12/sealed-secrets'
+    repoURL: 'https://github.com/obynodavid12/sealed-secrets.git'
     targetRevision: HEAD
     directory:
       recurse: true
