--- a/argocd/kubeseal-app/deployments/deployment.yaml
+++ b/argocd/kubeseal-app/deployments/deployment.yaml
@@ -27,7 +27,7 @@ spec:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mysql-secret1
+              name: mysql-secret
               key: password
         ports:
         - containerPort: 3306
